# django-powered-tools

./: .gitignore  README.md  pyproject.toml  setup.py
djangopoweredtools/: constants.py  generic.py
djangopoweredtools/templatetags/: djangopowertools.py
djangopowertools/: generic.py
djangopowerviews/: forms.py  generic.py
