[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-powered-tools"
version = "1.8.2"
description = "Views y herramientas extra para django que permiten busqueda sobre listas y redireccion con anclas y extras"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"

authors = [
    { name = "darkdeymon", email = "darkdeymon04@gmail.com" }
]

dependencies = [
    "django>=5.1"
]

[project.urls]
Homepage = "https://github.com/DARKDEYMON/django-powered-tools"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["djangopoweredtools*"]
